# dp_stm32f427_dev_cmake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: osal_overload_mgr.h
lib/dp_osal_port/: CMakeLists.txt  osal_config.cmake  osal_port_debug.cpp  osal_test_framework_config.h
lib/hal/: .gitignore  dp_stm32f427_dev.ioc
lib/hal/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h  usart.h
lib/hal/Core/Src/: can.c  dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
lib/hal/cmake/stm32cubemx/: CMakeLists.txt
lib/osal_port/: CMakeLists.txt  osal_config.cmake  osal_port_config.h  osal_port_debug.cpp
src/: main.cpp  osal_overload_mgr.cpp
